corrected alignment and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,9 +42,20 @@ aside {
     background-color: #2589bd;
 }
 
+footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+
 h1 {
     display: inline-block;
     font-size: 48px;
+}
+
+footer h2 {
+    font-size: 20px;
 }
 
 h3 {
@@ -113,9 +124,6 @@ p {
     max-width: 150px;
 }
 
-
-
-
 .float-left {
     float: left;
     margin-right: 25px;
@@ -127,13 +135,4 @@ p {
 }
 
 
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
 
-.footer h2 {
-    font-size: 20px;
-}
